src/objects/ACCL__Product_Hierarchy__c.object
<CustomObject>
    <description>Relation from a product (Child_Product) to its parent. This relation is time framed.</description>
    <fields>
        <fullName>ACCL__Child_Product__c</fullName>
        <description>Reference to the child product.</description>
        <label>Child Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Parent Products</relationshipLabel>
        <relationshipName>Product_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product_Code__c</fullName>
        <description>Unique identifier of parent product.</description>
        <formula>ACCL__Parent_Product__r.ACCL__Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product_Description__c</fullName>
        <description>Short description of the parent product.</description>
        <formula>ACCL__Parent_Product__r.ACCL__Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the parent product.</description>
        <label>Parent Product</label>
        <referenceTo>ACCL__Product__c</referenceTo>
        <relationshipLabel>Child Products</relationshipLabel>
        <relationshipName>Product_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the product (Child_Product) record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Structure_Type__c</fullName>
        <description>Specifies the structure type of the hierarchy.</description>
        <label>Structure Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Hierarchy</label>
    <nameField>
        <displayFormat>PHR-{00000000}</displayFormat>
        <label>Product Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Child_unequal_parent</fullName>
        <active>true</active>
        <description>The Child Product and the Parent Product can&apos;t be the same.</description>
        <errorConditionFormula>ACCL__Child_Product__c == ACCL__Parent_Product__c</errorConditionFormula>
        <errorMessage>The Child Product and the Parent Product can&apos;t be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Mandatory_StructureType_is_set</fullName>
        <active>true</active>
        <description>The Structure Type can&apos;t be empty.</description>
        <errorConditionFormula>ISPICKVAL( ACCL__Structure_Type__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>ACCL__Structure_Type__c</errorDisplayField>
        <errorMessage>The Structure Type can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Parent_Product_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>OR (ISBLANK(ACCL__Parent_Product__c), ISNULL(ACCL__Parent_Product__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Parent_Product__c</errorDisplayField>
        <errorMessage>The Parent Product can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Product_Hierarchy_Sales_Org_Mismatch</fullName>
        <active>true</active>
        <description>The Child Product and the Parent Product must have the same Sales Org.</description>
        <errorConditionFormula>ACCL__Child_Product__r.ACCL__Sales_Org__c != ACCL__Parent_Product__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Child Product and the Parent Product must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_and_Valid_Thru</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorDisplayField>ACCL__Valid_Thru__c</errorDisplayField>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>